# fablab-visitor-logger

./: .bandit  .bandit.yml  .coverage  .device_tracking_enhancement_plan.md.swp  .flake8  .gitignore  .pre-commit-config.yaml  .pyproject.toml.swp  CLAUDE.md  DEVELOPMENT.md  Makefile  README.md  ble_wrapper  ble_wrapper.c  ble_wrapper.py  code_review_plan.md  code_review_report.md  config.py  coverage.xml  database.py  device_tracking_enhancement_plan.md  fablab_logger.db  fablab_presence.db  fablab_presence_tracking_specs.md  fablab_visitor_logger_design.md  fablab_visitor_logger_development_guidelines.md  fablab_visitor_logger_implementation_plan.md  main.py  mypy.ini  pyproject.toml  pytest.ini  reporting.py  requirements-dev.txt  requirements.txt  run_fablab_logger.sh  scanner.py  test_visitors.csv
.github/workflows/: python-tests.yml
deployment/: fablab-logger.service
fablab_visitor_logger/: ble_wrapper.py  config.py  database.py  main.py  reporting.py  reporting.py.bak  scanner.py  vendor.py
fablab_visitor_logger.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_config.py  test_database.py  test_database_device_info.py  test_device_info.py  test_main.py  test_reporting.py  test_scanner.py
tests/features/: device_info.feature
tests/features/steps/: device_steps.py
