[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "fablab_visitor_logger"
version = "0.1.0"
description = "FabLab visitor presence tracking system"
dependencies = [
    "bleak",
    "python-dotenv",
    "sqlalchemy",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-asyncio"
]

[tool.black]
line-length = 88

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.flake8]
max-line-length = 88
extend-select = ["B950"]
extend-ignore = ["W293", "W503"]

[tool.isort]
profile = "black"

[tool.setuptools]
packages = ["fablab_visitor_logger"]

[tool.pytest.ini_options]
# Explicitly use asyncio backend from pytest-asyncio
# This helps avoid conflicts if other async plugins like anyio are detected
asyncio_mode = "strict"
